--- a/src/components/FeaturedProducts/FeaturedProducts.scss
+++ b/src/components/FeaturedProducts/FeaturedProducts.scss
@@ -1,26 +1,28 @@
 .featuredProducts {
-  margin: 100px 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 
   .top {
+    padding-top: 100px;
+    padding-bottom: 100px;
     display: flex;
+    justify-content: center;
     align-items: center;
-    justify-content: space-between;
-    margin-bottom: 50px;
-
     h1 {
-      flex: 2;
       text-transform: capitalize;
-    }
-
-    p{
-      flex:3;
-      color:gray
     }
   }
 
   .bottom{
     display: flex;
     justify-content: center;
-    gap: 50px;
+    align-items: center;
+    gap: 40px;
+    flex-wrap: wrap;
+    width: 70%;
+    justify-content: center;
+    align-items: center;
   }
 }
