--- a/src/pages/Products/Products.scss
+++ b/src/pages/Products/Products.scss
@@ -1,12 +1,8 @@
 .products {
-  padding: 30px 50px;
   display: flex;
-
   .left {
     flex: 1;
-    position: sticky;
     height: 100%;
-    top: 50px;
 
     .filterItem{
       margin-bottom: 30px;
@@ -27,7 +23,7 @@
   
   .right {
     flex: 3;
-
+    flex-wrap: wrap;
     .catImg{
       width: 100%;
       height: 300px;
